unpackaged/main/default/objects/EBH_Project__c/EBH_Project__c.object-meta.xml
<CustomObject>
    <description>#US-0015700</description>
    <label>Project</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>