unpackaged/main/default/objects/EBH_Project__c/fields/ABNVATNumber__c.field-meta.xml
<CustomField>
    <fullName>ABNVATNumber__c</fullName>
    <description>#US-0018736</description>
    <label>VAT/ABN Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>