unpackaged/main/default/objects/EBH_Project__c/fields/AccountingSoftware__c.field-meta.xml
<CustomField>
    <fullName>AccountingSoftware__c</fullName>
    <description>US-0007708 - [AU] New fields for &#39;Managed Payment&#39; Pagelayout for Project</description>
    <label>Accounting Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>