unpackaged/main/default/objects/EBH_Project__c/fields/AcquisitionManager__c.field-meta.xml
<CustomField>
    <fullName>AcquisitionManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0007448</description>
    <label>Acquisition Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>