unpackaged/main/default/objects/EBH_Project__c/fields/ActualLiveToSite__c.field-meta.xml
<CustomField>
    <fullName>ActualLiveToSite__c</fullName>
    <description>#US-0018736</description>
    <label>Actual Live to Site</label>
    <type>Date</type>
</CustomField>