unpackaged/main/default/objects/EBH_Project__c/fields/Additional_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Request_Details__c</fullName>
    <description>US-0009462 - UK Risk: new permission, record type and page layout on Project</description>
    <label>Additional Request Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>