unpackaged/main/default/objects/EBH_Project__c/fields/Advertising_budget__c.field-meta.xml
<CustomField>
    <fullName>Advertising_budget__c</fullName>
    <description>US-0010689</description>
    <inlineHelpText>If Yes, What is the intended campaign size?</inlineHelpText>
    <label>Advertising budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>