unpackaged/main/default/objects/EBH_Project__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>#US-0018736</description>
    <formula>IF(ISPICKVAL(EBH_Stage__c, &#39;Open&#39;), TODAY() - DATEVALUE(CreatedDate), 
  IF(OR(ISPICKVAL(EBH_Stage__c, &#39;Live To Site&#39;), ISPICKVAL(EBH_Stage__c, &#39;Closed Lost&#39;)), CloseDate__c - DATEVALUE(CreatedDate), 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>