unpackaged/main/default/objects/EBH_Project__c/fields/Age_of_project__c.field-meta.xml
<CustomField>
    <fullName>Age_of_project__c</fullName>
    <description>US-0010604 - Project Stage duration</description>
    <formula>IF(ISBLANK( CloseDate__c ), TODAY() , CloseDate__c ) - DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of project</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>