unpackaged/main/default/objects/EBH_Project__c/fields/AllowToComplete__c.field-meta.xml
<CustomField>
    <fullName>AllowToComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007801</description>
    <inlineHelpText>Created only for Admins, please set to &quot;True&quot; if you want to move leads to status &quot;completed&quot; via Data Loader

Please make sure to set the flag to &quot;false&quot; once you upload projects</inlineHelpText>
    <label>Allow to Complete</label>
    <type>Checkbox</type>
</CustomField>