unpackaged/main/default/objects/EBH_Project__c/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <label>API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trading API</fullName>
            </value>
            <value>
                <fullName>Inventory API</fullName>
            </value>
            <value>
                <fullName>Other eBay API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>