unpackaged/main/default/objects/EBH_Project__c/fields/Appeal_Status__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Status__c</fullName>
    <label>Appeal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>