unpackaged/main/default/objects/EBH_Project__c/fields/Average_Claims_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Claims_Rate__c</fullName>
    <description>US-0010081 - [UK Risk] Exposure Calculation in Seller Risk Management Project</description>
    <formula>EBH_Seller__r.Claims_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>last 90 day average</inlineHelpText>
    <label>Average Claims Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>