unpackaged/main/default/objects/EBH_Project__c/fields/Average_Days_per_Claim__c.field-meta.xml
<CustomField>
    <fullName>Average_Days_per_Claim__c</fullName>
    <defaultValue>45</defaultValue>
    <description>US-0010081 - [UK Risk] Exposure Calculation in Seller Risk Management Project</description>
    <label>Average Days per Claim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>