unpackaged/main/default/objects/EBH_Project__c/fields/Average_GMS__c.field-meta.xml
<CustomField>
    <fullName>Average_GMS__c</fullName>
    <description>US-0010081 - [UK Risk] Exposure Calculation in Seller Risk Management Project</description>
    <formula>EBH_Seller__r.EBH_GMVLast12Months__c  / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average Sold GMV (1 year average)</inlineHelpText>
    <label>Average GMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>