unpackaged/main/default/objects/EBH_Project__c/fields/Average_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Sales_Price__c</fullName>
    <description>US-0010689</description>
    <label>Average Sales Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>