unpackaged/main/default/objects/EBH_Project__c/fields/Basic_KYB_for_Commercial_Entities__c.field-meta.xml
<CustomField>
    <fullName>Basic_KYB_for_Commercial_Entities__c</fullName>
    <description>US-0009564 - UK Risk: GCX permission set and New fields on Project</description>
    <inlineHelpText>Data available in credit bureau Experian and public sources e.g. Companies House</inlineHelpText>
    <label>Basic KYB for Commercial Entities</label>
    <type>TextArea</type>
</CustomField>