unpackaged/main/default/objects/EBH_Project__c/fields/Business_details__c.field-meta.xml
<CustomField>
    <fullName>Business_details__c</fullName>
    <description>US-0009564 - UK Risk: GCX permission set and New fields on Project</description>
    <label>Business details</label>
    <type>TextArea</type>
</CustomField>