unpackaged/main/default/objects/EBH_Project__c/fields/BusinessTypeAU__c.field-meta.xml
<CustomField>
    <fullName>BusinessTypeAU__c</fullName>
    <description>US-0007708 - [AU] New fields for &#39;Managed Payment&#39; Pagelayout for Project
US-0009564 - UK Risk: GCX permission set and New fields on Project</description>
    <label>Business Type (AU only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Sole Trader</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>