unpackaged/main/default/objects/EBH_Project__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#US-0018736, #US-0008828</description>
    <label>Primary Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>