unpackaged/main/default/objects/EBH_Project__c/fields/Category_Risk__c.field-meta.xml
<CustomField>
    <fullName>Category_Risk__c</fullName>
    <description>US-0009564 - UK Risk: GCX permission set and New fields on Project</description>
    <inlineHelpText>Check category risk (e.g. prohibited/restricted, counterfeit/stolen goods risk) and consistency</inlineHelpText>
    <label>Category Risk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>