unpackaged/main/default/objects/EBH_Project__c/fields/CategoryManager__c.field-meta.xml
<CustomField>
    <fullName>CategoryManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0007448</description>
    <label>Category Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>