unpackaged/main/default/objects/EBH_Project__c/fields/CE_Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>CE_Certification_Status__c</fullName>
    <description>US-0007683 - Fulfilment - CE Law &amp; Out of eFF fields</description>
    <label>CE Certification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mass mailing sent</fullName>
            </value>
            <value>
                <fullName>CE Certificate sent to agency</fullName>
            </value>
            <value>
                <fullName>CE Certificate Positive</fullName>
            </value>
            <value>
                <fullName>CE Certificate Incomplete</fullName>
            </value>
            <value>
                <fullName>No CE Certificate Needed</fullName>
            </value>
            <value>
                <fullName>See Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>