unpackaged/main/default/objects/EBH_Project__c/fields/Claim_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Claim_Exposure__c</fullName>
    <description>US-0010081 - [UK Risk] Exposure Calculation in Seller Risk Management Project</description>
    <formula>(Average_GMS__c  / 30) *  Average_Claims_Rate__c  *  Average_Days_per_Claim__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average GMS/30 x Average Claim Rate x Average Days per Claim</inlineHelpText>
    <label>Claim Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>