unpackaged/main/default/objects/EBH_Project__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>#US-0018736
US-0007531 - [AU &amp; EU ] Project Record EU Acquisition - Change fieldlable &amp; Workflow
US-0010688</description>
    <inlineHelpText>Date when final outcome was captured and completed</inlineHelpText>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>