unpackaged/main/default/objects/EBH_Project__c/fields/ClosedLostReasons__c.field-meta.xml
<CustomField>
    <fullName>ClosedLostReasons__c</fullName>
    <description>#US-0018736</description>
    <label>Closed Lost Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already on ebay</fullName>
            </value>
            <value>
                <fullName>Bad experience - eBay policies or standards</fullName>
            </value>
            <value>
                <fullName>Bad experience - high fees</fullName>
            </value>
            <value>
                <fullName>Bad experience - insufficient sales</fullName>
            </value>
            <value>
                <fullName>Bad experience - time consuming</fullName>
            </value>
            <value>
                <fullName>Brand Association</fullName>
            </value>
            <value>
                <fullName>Cost Factor - CS</fullName>
            </value>
            <value>
                <fullName>Cost Factor - fees</fullName>
            </value>
            <value>
                <fullName>Cost Factor - Integration</fullName>
            </value>
            <value>
                <fullName>Do Not Solicit anymore</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Inappropriate titles</fullName>
            </value>
            <value>
                <fullName>Integration not possible</fullName>
            </value>
            <value>
                <fullName>No longer active</fullName>
            </value>
            <value>
                <fullName>No longer trading</fullName>
            </value>
            <value>
                <fullName>Not looking to grow business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overseas merchant</fullName>
            </value>
            <value>
                <fullName>PayPal Unavailable</fullName>
            </value>
            <value>
                <fullName>Previously contacted – Not Interested</fullName>
            </value>
            <value>
                <fullName>Products not suitable</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Shipping Options</fullName>
            </value>
            <value>
                <fullName>Subscription based site</fullName>
            </value>
            <value>
                <fullName>Supplier Issues</fullName>
            </value>
            <value>
                <fullName>Time consuming</fullName>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
            </value>
            <value>
                <fullName>Unpleasant eBay experience</fullName>
            </value>
            <value>
                <fullName>Unsupported platforms</fullName>
            </value>
            <value>
                <fullName>Unsustainable products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>