unpackaged/main/default/objects/EBH_Project__c/fields/CommercePlatform__c.field-meta.xml
<CustomField>
    <fullName>CommercePlatform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0007448</description>
    <label>Commerce platform</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EBH_Partner</value>
        </filterItems>
        <filterItems>
            <field>Account.EBH_PartnerType__c</field>
            <operation>equals</operation>
            <value>Commerce Platform</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Commerce platform)</relationshipLabel>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>