unpackaged/main/default/objects/EBH_Project__c/fields/Commercials__c.field-meta.xml
<CustomField>
    <fullName>Commercials__c</fullName>
    <description>US-0010689</description>
    <label>Commercials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>LMO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>