unpackaged/main/default/objects/EBH_Project__c/fields/Credit_check_for_Commercial_Entities__c.field-meta.xml
<CustomField>
    <fullName>Credit_check_for_Commercial_Entities__c</fullName>
    <description>US-0009564 - UK Risk: GCX permission set and New fields on Project</description>
    <label>Credit check for Commercial Entities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>