unpackaged/main/default/objects/EBH_Project__c/fields/CSTraining__c.field-meta.xml
<CustomField>
    <fullName>CSTraining__c</fullName>
    <description>#US-0018736</description>
    <label>CS Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Working on it</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>