unpackaged/main/default/objects/EBH_Project__c/fields/CUDComments__c.field-meta.xml
<CustomField>
    <fullName>CUDComments__c</fullName>
    <description>US-0007745</description>
    <inlineHelpText>Supporting Comments for CUD Team</inlineHelpText>
    <label>CUD Comments</label>
    <type>TextArea</type>
</CustomField>