unpackaged/main/default/objects/EBH_Project__c/fields/Customer_service_dept__c.field-meta.xml
<CustomField>
    <fullName>Customer_service_dept__c</fullName>
    <description>US-0010689</description>
    <inlineHelpText>Do you have a customer Service Dept?</inlineHelpText>
    <label>Customer service dept?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>