unpackaged/main/default/objects/EBH_Project__c/fields/Customer_service_resources__c.field-meta.xml
<CustomField>
    <fullName>Customer_service_resources__c</fullName>
    <description>US-0010689</description>
    <inlineHelpText>How many people are dedicated to customer service?</inlineHelpText>
    <label>#Customer service resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>