unpackaged/main/default/objects/EBH_Project__c/fields/Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned__c</fullName>
    <description>US-0010569 - EU Acquisition: Adding Fields to Onboarding Projects</description>
    <inlineHelpText>Date the Integration Manager is assigned</inlineHelpText>
    <label>Date Assigned</label>
    <type>Date</type>
</CustomField>