unpackaged/main/default/objects/EBH_Project__c/fields/DeactivateManagedPaymentRecord__c.field-meta.xml
<CustomField>
    <fullName>DeactivateManagedPaymentRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008570 - Managed Payments EU</description>
    <inlineHelpText>Designate seller as inactive</inlineHelpText>
    <label>Deactivate Managed Payment Record</label>
    <type>Checkbox</type>
</CustomField>