unpackaged/main/default/objects/EBH_Project__c/fields/Delayed_Delivery_Days_DDD__c.field-meta.xml
<CustomField>
    <fullName>Delayed_Delivery_Days_DDD__c</fullName>
    <defaultValue>3</defaultValue>
    <description>US-0010081 - [UK Risk] Exposure Calculation in Seller Risk Management Project</description>
    <inlineHelpText>The number of days between receiving the payment from the buyer and shipping to the buyer (last 90 day average)</inlineHelpText>
    <label>Delayed Delivery Days (DDD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>