unpackaged/main/default/objects/EBH_Project__c/fields/Delayed_Delivery_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Delayed_Delivery_Exposure__c</fullName>
    <description>US-0010081 - [UK Risk] Exposure Calculation in Seller Risk Management Project</description>
    <formula>(Average_GMS__c  / 30) *  Delayed_Delivery_Days_DDD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average GMS/30 x Delayed Delivery in Days (DDD)</inlineHelpText>
    <label>Delayed Delivery Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>