unpackaged/main/default/objects/EBH_Project__c/fields/DEMISSupportRequest__c.field-meta.xml
<CustomField>
    <fullName>DEMISSupportRequest__c</fullName>
    <formula>HYPERLINK(&#39;https://jira.realcommerce.de/servicedesk/customer/portals&#39;, &#39;Click here&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DE MIS Support Request</label>
    <type>Text</type>
</CustomField>