unpackaged/main/default/objects/EBH_Project__c/fields/Design_Partner__c.field-meta.xml
<CustomField>
    <fullName>Design_Partner__c</fullName>
    <description>US-0006850</description>
    <label>Design Partner</label>
    <type>TextArea</type>
</CustomField>