unpackaged/main/default/objects/EBH_Project__c/fields/Design_spend__c.field-meta.xml
<CustomField>
    <fullName>Design_spend__c</fullName>
    <description>US-0006850</description>
    <label>Design spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>