unpackaged/main/default/objects/EBH_Project__c/fields/DirectAPIManagedby__c.field-meta.xml
<CustomField>
    <fullName>DirectAPIManagedby__c</fullName>
    <description>US-0007708 - [AU] New fields for &#39;Managed Payment&#39; Pagelayout for Project</description>
    <label>Direct API Managed by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local IT Team</fullName>
            </value>
            <value>
                <fullName>External IT Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>