unpackaged/main/default/objects/EBH_Project__c/fields/eBay_3P_consent__c.field-meta.xml
<CustomField>
    <fullName>eBay_3P_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008199 - DE Managed Fulfillment - Landing page consent form</description>
    <inlineHelpText>Seller’s consent for eBay GmbH to pass on personal data provided above to 3rd party Orange Connex Global Germany GmbH, so that they can contact by email and / or phone about services and Orange Connex offers...</inlineHelpText>
    <label>eBay 3P consent</label>
    <type>Checkbox</type>
</CustomField>