unpackaged/main/default/objects/EBH_Project__c/fields/eBay_consent__c.field-meta.xml
<CustomField>
    <fullName>eBay_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008199 - DE Managed Fulfillment - Landing page consent form</description>
    <inlineHelpText>Seller’s consent for eBay GmbH to use personal data provided above to inform about new services and offers from eBay GmbH by email and /or phone.</inlineHelpText>
    <label>eBay consent</label>
    <type>Checkbox</type>
</CustomField>