unpackaged/main/default/objects/EBH_Project__c/fields/Ebay_Store_advertising_plan__c.field-meta.xml
<CustomField>
    <fullName>Ebay_Store_advertising_plan__c</fullName>
    <description>US-0010689</description>
    <label>Ebay Store advertising plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>