unpackaged/main/default/objects/EBH_Project__c/fields/eBayProfileURL__c.field-meta.xml
<CustomField>
    <fullName>eBayProfileURL__c</fullName>
    <description>US-0007610</description>
    <formula>EBH_Seller__r.EBH_StoreURL__c</formula>
    <label>eBay Profile URL</label>
    <type>Text</type>
</CustomField>