unpackaged/main/default/objects/EBH_Project__c/fields/eBaySearchResults__c.field-meta.xml
<CustomField>
    <fullName>eBaySearchResults__c</fullName>
    <description>US-0007448</description>
    <label>eBay Search Results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>