unpackaged/main/default/objects/EBH_Project__c/fields/eBayStoreURL__c.field-meta.xml
<CustomField>
    <fullName>eBayStoreURL__c</fullName>
    <description>#US-0018736</description>
    <label>eBay Store URL</label>
    <type>Url</type>
</CustomField>