unpackaged/main/default/objects/EBH_Project__c/fields/eBayUser_ID__c.field-meta.xml
<CustomField>
    <fullName>eBayUser_ID__c</fullName>
    <description>US-0007032: [AU] Conditional Mandatory validations for &quot;eBay User Id&quot; new text field in Object &quot;Project&quot;,
US-0007647</description>
    <inlineHelpText>Name of the merchant to be be used when associating seller with a project.</inlineHelpText>
    <label>User ID (preliminary)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>