unpackaged/main/default/objects/EBH_Project__c/fields/eBF_2_0_Status__c.field-meta.xml
<CustomField>
    <fullName>eBF_2_0_Status__c</fullName>
    <description>US-0008217 - DE Managed Fulfillment - field for eBF 2.0 Status</description>
    <inlineHelpText>Indicate seller&#39;s progress in transitioning to the new eBay Fulfillment program.</inlineHelpText>
    <label>eBF 2.0 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing eBF1.0</fullName>
            </value>
            <value>
                <fullName>New to eBF2.0</fullName>
            </value>
            <value>
                <fullName>eBF1.0 committed to move</fullName>
            </value>
            <value>
                <fullName>eBF1.0 organizing move</fullName>
            </value>
            <value>
                <fullName>Will not join</fullName>
            </value>
            <value>
                <fullName>Other (see comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>